--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tedxserver",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node server.js"
+    "test": "node server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +16,6 @@
     "fs": "^0.0.1-security",
     "mssql": "^11.0.1",
     "path": "^0.12.7"
-  }
+  },
+  "description": ""
 }
