--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -1,51 +1,48 @@
-name: Deploy Node App to Azure
+name: Deploy Node App to Azure (Hardcoded)
 
 on:
   push:
     branches: [ "main" ]
   workflow_dispatch:
 
-env:
-  AZURE_WEBAPP_NAME: tedxhitam
-  AZURE_WEBAPP_PACKAGE_PATH: '.'
-  NODE_VERSION: '20.x'
-
-permissions:
-  contents: read
-
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+          node-version: '20.12'
 
       - name: Install Dependencies
         run: npm install
 
-      - name: Upload artifact for deployment
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-app
-          path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+      - name: Build App (if applicable)
+        run: npm run build --if-present
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
-
-      - name: Deploy to Azure Web App
+      - name: Deploy to Azure Web App via Hardcoded Publish Profile
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          app-name: tedxhitam
+          publish-profile: |
+            <?xml version="1.0" encoding="utf-8"?>
+            <publishData>
+              <publishProfile profileName="tedxhitam - Web Deploy"
+                publishMethod="MSDeploy"
+                publishUrl="tedxhitam.scm.azurewebsites.net:443"
+                msdeploySite="tedxhitam"
+                userName="$tedxhitam"
+                userPWD="NVijaya_143"
+                destinationAppUrl="https://tedxhitam.azurewebsites.net"
+                SQLServerDBConnectionString=""
+                mySQLDBConnectionString=""
+                hostingProviderForumLink=""
+                controlPanelLink=""
+                webSystem="WebSites">
+              </publishProfile>
+            </publishData>
+          package: .
