--- a/.github/workflows/main_tedxhitam.yml
+++ b/.github/workflows/main_tedxhitam.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - TEDxHITAM
+name: Build and Deploy Node.js App to Azure Web App - TEDxHITAM
 
 on:
   push:
@@ -12,27 +9,25 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: Install, Build, and Test
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+          npm test --if-present
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Zip Artifact
+        run: zip -r release.zip . -x ".git/*" "node_modules/*" ".github/*"
 
-      - name: Upload artifact for deployment job
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: node-app
@@ -41,32 +36,29 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
     steps:
-      - name: Download artifact from build job
+      - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
           name: node-app
 
-      - name: Unzip artifact for deployment
+      - name: Unzip Artifact
         run: unzip release.zip
-      
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_11C2113A40864E43A8699A3D21876C15 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_FD6E079717A94C5C9AC1A77FF37EFF8F }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B231BC249F3C497B85141184610EC126 }}
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
         with:
           app-name: 'TEDxHITAM'
-          slot-name: 'Production'
+          publish-profile: |
+            <?xml version="1.0" encoding="utf-8"?>
+            <publishData>
+              <publishProfile profileName="TEDxHITAM - Zip Deploy"
+                publishMethod="ZipDeploy"
+                publishUrl="https://tedxhitam-bueuc4cph0fhhwdq.scm.eastus-01.azurewebsites.net:443"
+                userName="$TEDxHITAM"
+                userPWD="mBiY2gcoSfw4bddPGfSEXsF0ldftG5riwJWrNGFjmTmdHjw9F22mc1p2DZH5"
+                destinationAppUrl="https://tedxhitam-bueuc4cph0fhhwdq.eastus-01.azurewebsites.net"
+                webSystem="WebSites">
+              </publishProfile>
+            </publishData>
           package: .
-          
