--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "mssql": "^11.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "multer":"^2.0.1"
   },
   "description": ""
 }
