--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "mssql": "^11.0.1",
     "path": "^0.12.7",
     "multer":"^2.0.1",
-    "mysql2":"^3.14.2"
+    "mysql2":"^3.14.2",
+    "dotenv":"^17.2.0"
+    
   },
   "description": ""
 }
