--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "basic-ftp": "^5.0.5",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "mssql": "^11.0.1",
-    "path": "^0.12.7",
-    "multer":"^2.0.1",
-    "mysql2":"^3.14.2",
-    "dotenv":"^17.2.0",
-    "basic-ftp":"^5.0.5"
-    
+    "multer": "^2.0.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.14.2",
+    "path": "^0.12.7"
   },
   "description": ""
 }
