--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "multer": "^2.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.2",
-    "path": "^0.12.7"
+    "nodemailer": "^7.0.5",
+    "path": "^0.12.7",
+    "qrcode": "^1.5.4"
   },
   "description": ""
 }
